Started to add geoJSON

--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title Drown The Ave
-        script(src='/static/styles/style.css')
+        link(rel='stylesheet' type='text/css' src='/static/styles/style.css')
 
     body
-        p hello world
+        h2 hello world
