Make database.js actually work

--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,8 @@ doctype html
 html
     head
         title Drown The Ave
-        link(rel='stylesheet' type='text/css' src='/static/styles/style.css')
+        link(rel='stylesheet' type='text/css' href='/static/styles/style.css')
 
     body
-        h2 hello world
+        h1 hello world
+        h2 #{users[0].username} - #{users[0]._id}
