Fixed session bug, added logout

--- a/views/home.jade
+++ b/views/home.jade
@@ -7,6 +7,6 @@ html
     body
         h1 hello world
         if user
-            h2 #{user.username} - #{users._id}
+            h2 #{user.username} - #{user._id}
 
         a(href="/auth/google") logins
