--- a/views/home.jade
+++ b/views/home.jade
@@ -8,5 +8,8 @@ html
         h1 hello world
         if user
             h2 #{user.profile.firstName} #{user.profile.lastName} - #{user._id}
-
-        a(href="/auth/google") logins
+            a(href="/auth/logout") logout
+        else
+            a(href="/auth/login") login
+            br
+            a(href="/auth/google") google login
