Made front page show bars

--- a/views/home.jade
+++ b/views/home.jade
@@ -13,3 +13,7 @@ html
             a(href="/auth/login") login
             br
             a(href="/auth/google") google login
+
+        ul
+            each bar in bars
+                li #{bar.name}
