--- a/views/login.jade
+++ b/views/login.jade
@@ -1,10 +1,20 @@
 doctype html
 html
     head
-        title login
+        title login/signup
 
     body
-        form(method="POST")
+        h2 login
+        form(method="POST" action="/auth/login")
             input(name="username")
-            input(name="password")
+            input(name="password" type="password")
             input(type="submit")
+
+        h2 signup
+        form(method="POST" action="/auth/signup")
+            input(name="username")
+            input(name="password" type="password")
+            input(type="submit")
+
+        h2 google
+        a(href="/auth/google") sign in with google
