Created Special schema

--- a/views/home.jade
+++ b/views/home.jade
@@ -15,3 +15,7 @@ html
         ul
             each bar in bars
                 li #{bar.name}
+
+        ul
+            each special in specials
+                li #{special.deal}
