--- a/views/admin/bar.jade
+++ b/views/admin/bar.jade
@@ -20,4 +20,42 @@ html
             label long
             input(name="long" value=bar.location[0])
             br
+
+            each i in [0,1,2,3,4,5,6]
+                h4 day #{i}
+                each r in bar.hours[i]
+                    label start
+                    input(name="hours[#{i}][start][]" value=r.start)
+                    label end
+                    input(name="hours[#{i}][end][]" value=r.end)
+                    a(href="#" class="delete") -
+                    br
+
+                a(href="#" class="add" data-index=i) +
+                br
+
             input(type="submit" value="edit")
+
+        script.
+            window.addEventListener('load', function(){
+                document.body.addEventListener('click', function(evt) {
+                    if (evt.target.tagName !== 'A') return;
+
+                    if (evt.target.classList.contains('add')) {
+                        evt.preventDefault();
+                        var i = evt.target.getAttribute('data-index');
+                        evt.target.insertAdjacentHTML('beforebegin', '<label>start</label><input name="hours['+i+'][start][]"/><label>end</label><input name="hours['+i+'][end][]" /><a href="#" class="delete">-</a><br />')
+
+                    } else if (evt.target.classList.contains('delete')) {
+                        evt.preventDefault();
+                        var form = document.querySelector('form');
+                        for (var i = 0; i < 4; i++) {
+                            form.removeChild(evt.target.previousSibling);
+                        }
+                        form.removeChild(evt.target.nextSibling);
+                        form.removeChild(evt.target);
+
+                        console.log('delete');
+                    }
+                });
+            });
