Added templates and basic logic for specials

--- a/views/admin/bar.jade
+++ b/views/admin/bar.jade
@@ -34,7 +34,7 @@ html
                 a(href="#" class="add" data-index=i) +
                 br
 
-            input(type="submit" value="edit")
+            input(type="submit")
 
         h3 specials
         ol
