--- a/views/admin/specials.jade
+++ b/views/admin/specials.jade
@@ -6,7 +6,7 @@ html
     body
         h2 specials
 
-        a(href="/admin/specials/add") add
+        a(href="/admin/special/add") add
 
         table
             thead
