Added User model and got it working

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -3,4 +3,6 @@ html
     head
 
     body
+        script(type="text/javascript")
+            != "user = " + JSON.stringify(user)
         script(type="text/javascript" data-main="/static/scripts/src/main" src="/static/scripts/lib/require.js")
