Added some styles

--- a/public/scripts/src/template/page.html
+++ b/public/scripts/src/template/page.html
@@ -1,4 +1,4 @@
-<div class="container page-container content">
+<div class="container page-container content pure-g-r">
 
 </div>
 <div class="loader"></div> <!-- unused -->
