--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-
+        link(href="/static/styles/admin.css" rel="stylesheet" type="text/css")
     body
         div(id="nav")
         div(id="pages")
