Fixed bugs, disabled backbone extension, added SearchPage

--- a/public/scripts/src/template/index.html
+++ b/public/scripts/src/template/index.html
@@ -1,10 +1,10 @@
-<a class="cell pure-u-1-2" href="/admin/bars">
+<a class="cell pure-u-1-2" href="/admin/browse/bar">
     <h2>Bars</h2>
 </a>
-<a class="cell pure-u-1-4" href="/admin/specials">
+<a class="cell pure-u-1-4" href="/admin/bar/new">
     <h2>Add Bar</h2>
 </a>
-<a class="cell pure-u-1-4" href="/admin/users">
+<a class="cell pure-u-1-4" href="/admin/bars">
     <h2>Open Bars</h2>
 </a>
 
