Got pushState routing to work

--- a/public/scripts/src/template/index.html
+++ b/public/scripts/src/template/index.html
@@ -1,7 +1,7 @@
-<a class="cell pure-u-1-2" href="/admin/browse/bar">
+<a class="cell pure-u-1-2" href="browse/bar">
     <h2>Bars</h2>
 </a>
-<a class="cell pure-u-1-4" href="/admin/bar/new">
+<a class="cell pure-u-1-4" href="bar/new">
     <h2>Add Bar</h2>
 </a>
 <a class="cell pure-u-1-4" href="/admin/bars">
