--- a/public/scripts/src/template/index.html
+++ b/public/scripts/src/template/index.html
@@ -1,26 +1,26 @@
 <a class="cell pure-u-1-2" href="browse/bar">
-    <h2>Bars</h2>
+    <h2 class="inner">Bars</h2>
 </a>
 <a class="cell pure-u-1-4" href="bar/new">
-    <h2>Add Bar</h2>
+    <h2 class="inner">Add Bar</h2>
 </a>
 <a class="cell pure-u-1-4" href="/admin/bars">
-    <h2>Open Bars</h2>
+    <h2 class="inner">Open Bars</h2>
 </a>
 
 <a class="cell pure-u-1-4" href="/admin/ads">
-    <h2>Current Specials</h2>
+    <h2 class="inner">Current Specials</h2>
 </a>
 <a class="cell pure-u-1-2" href="/admin/ads">
-    <h2>Specials</h2>
+    <h2 class="inner">Specials</h2>
 </a>
 <a class="cell pure-u-1-4" href="/admin/ads">
-    <h2>Add Special</h2>
+    <h2 class="inner">Add Special</h2>
 </a>
 
 <a class="cell pure-u-5-12" href="">
-    <h2>Users</h2>
+    <h2 class="inner">Users</h2>
 </a>
 <a class="cell pure-u-7-12" href="">
-    <h2>User Stats</h2>
+    <h2 class="inner">User Stats</h2>
 </a>
