Improved routing and lazy loading

--- a/public/scripts/src/template/index.html
+++ b/public/scripts/src/template/index.html
@@ -1,24 +1,24 @@
-<a class="cell pure-u-1-2" href="browse/bar">
+<a class="cell pure-u-1-2" href="/admin/browse/bar">
     <h2 class="inner">Bars</h2>
 </a>
-<a class="cell pure-u-1-4" href="bar/new">
+<a class="cell pure-u-1-4" href="">
     <h2 class="inner">Add Bar</h2>
 </a>
-<a class="cell pure-u-1-4" href="/admin/bars">
+<a class="cell pure-u-1-4" href="">
     <h2 class="inner">Open Bars</h2>
 </a>
 
-<a class="cell pure-u-1-4" href="/admin/ads">
+<a class="cell pure-u-1-4" href="">
     <h2 class="inner">Current Specials</h2>
 </a>
-<a class="cell pure-u-1-2" href="/admin/ads">
+<a class="cell pure-u-1-2" href="/admin/browse/special">
     <h2 class="inner">Specials</h2>
 </a>
-<a class="cell pure-u-1-4" href="/admin/ads">
+<a class="cell pure-u-1-4" href="">
     <h2 class="inner">Add Special</h2>
 </a>
 
-<a class="cell pure-u-5-12" href="">
+<a class="cell pure-u-5-12" href="/admin/browse/user">
     <h2 class="inner">Users</h2>
 </a>
 <a class="cell pure-u-7-12" href="">
