--- a/public/styles/scss/admin.scss
+++ b/public/styles/scss/admin.scss
@@ -35,3 +35,19 @@
         }
     }
 }
+
+.cell.loader {
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
+    padding: 0px;
+
+    &.loading {
+        font-size: 0px;
+        background-image: url(/static/images/sprites/spinner.gif);
+        background-size: 40px 40px;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        cursor: pointer;
+    }
+}
