--- a/public/scripts/src/template/nav.html
+++ b/public/scripts/src/template/nav.html
@@ -5,6 +5,5 @@
     <a class="pure-u-1-8 button" href="/admin/browse/special">specials</a>
     <a class="pure-u-1-8 button" href="/admin/browse/user">users</a>
 
-    <a class="pure-u-1-8 button aside">logout</a>
-    <a class="pure-u-1-8 button aside"><%-profile.firstName%></a>
+    <a class="pure-u-1-8 button aside external" href="/auth/logout">logout</a>
 </div>
