--- a/public/styles/scss/admin.scss
+++ b/public/styles/scss/admin.scss
@@ -6,16 +6,14 @@
 .cell {
     box-shadow: 0px 2px 2px 1px rgb(200,200,200);
     background-color: white;
-    height: 120px;
+    min-height: 120px;
     padding: 10px;
     margin-top: 2px;
+    text-decoration: none;
 
     .inner {
         color: black !important;
         text-decoration: none !important;
-        position: absolute;
-        bottom: 20px;
-        left: 20px;
     }
 
     a {
