--- a/public/styles/scss/admin.scss
+++ b/public/styles/scss/admin.scss
@@ -12,6 +12,10 @@
     margin-top: 2px;
     text-decoration: none;
 
+    &.padded {
+        margin: 15px;
+    }
+
     .inner {
         color: black !important;
         text-decoration: none !important;
