--- a/public/scripts/src/template/user.html
+++ b/public/scripts/src/template/user.html
@@ -1,5 +1,5 @@
 <div class="formContainer pure-u-1-2">
-    <form method="POST">
+    <form id="form" method="POST">
         <fieldset class="cell padded">
             <legend>name</legend>
             <input name="first" type="text" placeholder="first" value="<%-profile.firstName%>">
@@ -15,7 +15,7 @@
         <fieldset class="cell padded">
             <legend>toggle</legend>
             <label class="switch">
-                <input name="admin" type="checkbox" <%-profile.new ? "checked" : ""%> >
+                <input name="new" type="checkbox" <%-profile.new ? "checked" : ""%> >
                 <div class="vis"></div>
             </label>
 
@@ -31,6 +31,11 @@
 
 <div class="imageContainer pure-u-1-2">
     <div class="cell padded">
-        <div class="image-container"></div>
+        <div class="image-upload"></div>
     </div>
+    <fieldset class="cell padded">
+        <legend>submit</legend>
+        <button form="form" type="reset">reset</button>
+        <button form="form" type="submit">submit</button>
+    </fieldset>
 </div>
