--- a/public/partial/bars.html
+++ b/public/partial/bars.html
@@ -1,5 +1,8 @@
-<div>
-    <ol>
-        <li ng-repeat="model in models">{{model.name}}</li>
-    </ol>
+<a class="list-item" href="/admin/bar/{{model.id}}" ng-repeat="model in models">
+    <h2>{{model.name}}</h2>
+    <h4>{{model.website}}</h4>
+    <h4>{{model.id}}</h4>
+</a>
+<div class="list-item load {{loading ? 'loading' : ''}}" ng-click="loadMore()">
+    <h4>load more?</h4>
 </div>
