--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,6 +1,7 @@
 doctype html
 html(ng-app="app")
     head
+        base(href="/admin/")
         link(href="/static/styles/admin.css" rel="stylesheet" type="text/css")
         script(src="/static/scripts/lib/angular.js" type="text/javascript")
         script(src="/static/scripts/lib/angular-route.js" type="text/javascript")
@@ -9,5 +10,14 @@ html(ng-app="app")
         script(src="/static/scripts/src/controllers.js" type="text/javascript")
 
     body
-        div(id="nav")
-        div(id="pages" ng-view)
+        div(id="container")
+            div(id="sidebar")
+                div
+                    a(class="list-item" href="/") home
+                    a(class="list-item" href="/admin") admin
+                    a(class="list-item" href="/admin/bar") bars
+                    a(class="list-item" href="/admin/special") specials
+                    a(class="list-item" href="/admin/user") users
+                    a(class="list-item" href="/auth/logout") logout
+
+            div(id="content" ng-view)
