--- a/public/styles/scss/admin.scss
+++ b/public/styles/scss/admin.scss
@@ -3,6 +3,12 @@
 @import "list";
 
 #sidebar {
+    .list {
+        position: fixed;
+        top: 0px;
+        width: 200px;
+    }
+
     .list-item {
         min-height: 0px;
         padding: 13px 30px;
