--- a/views/admin.jade
+++ b/views/admin.jade
@@ -8,11 +8,12 @@ html(ng-app="app")
         script(src="/static/scripts/lib/angular-resource.js" type="text/javascript")
         script(src="/static/scripts/src/app.js" type="text/javascript")
         script(src="/static/scripts/src/controllers.js" type="text/javascript")
+        script(src="/static/scripts/src/directives.js" type="text/javascript")
 
     body
         div(id="container")
             div(id="sidebar")
-                div
+                div(class="list")
                     a(class="list-item" href="/") home
                     a(class="list-item" href="/admin") admin
                     a(class="list-item" href="/admin/bar") bars
