Abstracted out cell sass, added browse search

--- a/public/partial/item/bar-item.html
+++ b/public/partial/item/bar-item.html
@@ -1,4 +1,4 @@
-<a class="list-item" href="/admin/bar/{{model.id}}">
+<a class="list-item cell" href="/admin/bar/{{model.id}}">
     <h2>{{model.name}}</h2>
     <h4>{{model.website}}</h4>
     <h4>{{model.id}}</h4>
