--- a/public/partial/collection.html
+++ b/public/partial/collection.html
@@ -1,2 +1,24 @@
-<div style="width:100%;height: 200px;"></div>
+<div class="collection-options cell list-item">
+    <label style="display:block;">
+        Sort:
+        <select ng-model="sort">
+            <option ng-repeat="sort in sortOptions" ng-model="sort">{{sort}}</option>
+        </select>
+    </label>
+
+    <label style="display:block;">
+        Order:
+        <select ng-model="order">
+            <option value="asc" selected>ascending</option>
+            <option value="desc">descending</option>
+        </select>
+    </label>
+
+    <label style="display:block;">
+        Search:
+        <input value="search" ng-model="search"/>
+    </label>
+
+    <button ng-click="load()">search</button>
+</div>
 <item-list />
