--- a/public/partial/item/special-item.html
+++ b/public/partial/item/special-item.html
@@ -1,4 +1,4 @@
-<a class="list-item" href="/admin/special/{{model.id}}">
+<a class="list-item cell" href="/admin/special/{{model.id}}">
     <h2>{{model.barName}}</h2>
     <h4>{{model.deal}}</h4>
     <h4>{{model.id}}</h4>
