--- a/public/partial/item-list.html
+++ b/public/partial/item-list.html
@@ -1,7 +1,7 @@
 <div class="list">
     <ng-include ng-repeat="model in models" src="itemUrl"></ng-include>
 
-    <div class="list-item cell load {{loading ? 'loading' : ''}}" ng-click="loadMore()">
+    <a class="list-item cell load {{loading ? 'loading' : ''}}" ng-click="loadMore()">
         <h4>load more?</h4>
-    </div>
+    </a>
 </div>
