--- a/views/admin.jade
+++ b/views/admin.jade
@@ -9,6 +9,7 @@ html(ng-app="app")
         script(src="/static/scripts/src/app.js" type="text/javascript")
         script(src="/static/scripts/src/controllers.js" type="text/javascript")
         script(src="/static/scripts/src/directives.js" type="text/javascript")
+        script(src="/static/scripts/src/services.js" type="text/javascript")
 
     body
         div(id="container")
