Made list-item work much better and not mess up scope

--- a/public/partial/collection.html
+++ b/public/partial/collection.html
@@ -21,4 +21,4 @@
 
     <button style="left:300px;" ng-click="load()">search</button>
 </div>
-<item-list />
+<item-list template="{{itemUrl}}" options="listOptions" type="{{type}}"/>
