--- a/public/partial/item-list.html
+++ b/public/partial/item-list.html
@@ -1,7 +1,11 @@
 <div class="list">
-    <ng-include ng-repeat="model in models" src="itemUrl"></ng-include>
+    <div class="">
 
-    <a class="list-item cell load {{loading ? 'loading' : ''}}" ng-click="loadMore()">
+    </div>
+
+    <ng-include ng-repeat="model in models" src="template"></ng-include>
+
+    <a class="list-item cell load {{loading ? 'loading' : ''}}" ng-click="load()">
         <h4>load more?</h4>
     </a>
 </div>
