--- a/views/admin.jade
+++ b/views/admin.jade
@@ -3,6 +3,7 @@ html(ng-app="app")
     head
         base(href="/admin/")
         link(href="/static/styles/admin.css" rel="stylesheet" type="text/css")
+        script(src="/static/scripts/lib/underscore.js" type="text/javascript")
         script(src="/static/scripts/lib/angular.js" type="text/javascript")
         script(src="/static/scripts/lib/angular-route.js" type="text/javascript")
         script(src="/static/scripts/lib/angular-resource.js" type="text/javascript")
