Created special and user pages

--- a/public/partial/bar.html
+++ b/public/partial/bar.html
@@ -22,4 +22,5 @@
     <button style="left:300px;" ng-click="model.$save({type: 'bar'})">Submit</button>
 </div>
 
-<h2>Specials</h2>
+<h1 style="padding:5px 20px;" class="cell">Specials</h1>
+<item-list template="/static/partial/item/special-item.html" type="special" options="" />
