Added image-drop directive

--- a/public/partial/bar.html
+++ b/public/partial/bar.html
@@ -11,6 +11,9 @@
         Website:
         <input ng-model="model.website" />
     </label>
+</div>
+
+<div class="list-item cell">
     <label>
         Latitiude:
         <input ng-model="model.location[1]" />
