--- a/public/partial/user.html
+++ b/public/partial/user.html
@@ -1,4 +1,8 @@
 <div class="list-item cell">
+    <image-drop ng-model="model" c-width="100" c-height="100"/>
+</div>
+
+<div class="list-item cell">
     <label>
         First Name:
         <input ng-model="model.profile.firstName"></input>
