Got updating working

--- a/public/partial/item/user-item.html
+++ b/public/partial/item/user-item.html
@@ -1,5 +1,6 @@
 <a class="list-item cell" href="/admin/user/{{model.id}}">
     <h2>{{model.profile.firstName}} {{model.profile.lastName}}</h2>
-    <h4>{{model.local.username}}</h4>
+    <h4>{{model.username}}</h4>
+    <h4>{{model.profile.email}}</h4>
     <h4>{{model.id}}</h4>
 </a>
