--- a/public/styles/scss/_cell.scss
+++ b/public/styles/scss/_cell.scss
@@ -7,6 +7,18 @@
     background-color: white;
     color: black;
     text-decoration: none;
+
+    &.title {
+        height: 50px;
+
+        * {
+            display: inline;
+        }
+
+        h1,h2,h3 {
+
+        }
+    }
 }
 
 a.cell:hover {
