Got creation and deletion working, also fixed some sass

--- a/public/partial/bar.html
+++ b/public/partial/bar.html
@@ -1,8 +1,8 @@
 <div class="cell title">
     <h1>Edit Bar</h1>
 
-    <a style="left:200px;" href="/admin/bar/{{model.id}}/delete">delete</a>
-    <button style="left:200px;" ng-click="submit()">submit</button>
+    <a href="/admin/bar/{{model.id}}/delete">delete</a>
+    <button ng-click="submit()">submit</button>
 </div>
 <div class="list-item cell">
     <hours-picker ng-model="model.hours" />
