--- a/public/partial/special.html
+++ b/public/partial/special.html
@@ -1,7 +1,11 @@
+<div class="cell title">
+    <h1>Edit Special</h1>
+    <a href="/admin/special/{{model.id}}/delete">delete</a>
+    <button style="left:300px;" ng-click="submit()">Submit</button>
+</div>
 <div class="list-item cell">
     <label>
         Deal:
         <textarea ng-model="model.deal"></textarea>
     </label>
-    <button style="left:300px;" ng-click="model.$save({type: 'special'})">Submit</button>
 </div>
