Fixed save bug, added admin/new checkboxes

--- a/public/partial/user.html
+++ b/public/partial/user.html
@@ -25,6 +25,14 @@
         Phone:
         <input ng-model="model.profile.phone"></input>
     </label>
+    <label>
+        Admin:
+        <input type="checkbox" ng-model="model.isAdmin"></input>
+    </label>
+    <label>
+        New:
+        <input type="checkbox" ng-model="model.profile.new"></input>
+    </label>
 </div>
 
 <div class="list-item cell">
